# Elaborato22_07_2020

./: CMakeLists.txt  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
